DEFEDIT-1533 Remove unrelated profiler stuff.